5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1616_2926.log
== TEST (2019-04-01 14:13:34) 
-- CODE:
s = float(input("Quantidade de açai?"))
d = int(input("Quantidade de esfirras?"))
total = s*24 + d*3
print(round(total, 2))
-- OUTPUT:
12099.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:13:36) 
-- CODE:
s = float(input("Quantidade de açai?"))
d = int(input("Quantidade de esfirras?"))
total = s*24 + d*3
print(round(total, 2))
-- EXECUTION TIME:
0.132699
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
12099.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
16134.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
23304.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:00) 
-- CODE:
s = float(input("Quantidade de açai?"))
d = int(input("Quantidade de esfirras?"))
total = s*24 + d*3
print(round(total, 2))
-- OUTPUT:
12099.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:21:01) 
-- CODE:
s = float(input("Quantidade de açai?"))
d = int(input("Quantidade de esfirras?"))
total = s*24 + d*3
print(round(total, 2))
-- EXECUTION TIME:
0.175803
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
12099.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
16134.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
23304.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:28) 
-- CODE:
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
conv = 
total = s*24 + d*3
print(round(total, 2))
-- ERROR:
File "XXXX", line 3
    conv = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:23:29) 
-- CODE:
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
conv = 
total = s*24 + d*3
print(round(total, 2))
-- EXECUTION TIME:
0.13674
-- ERROR:
  File "/home/codebench/codes/1616/2926/main.py", line 3
    conv = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:28) 
-- CODE:
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
total = s*24 + d*3
conv = /100
print(round(total, 2))
print(conv)
-- ERROR:
File "XXXX", line 4
    conv = /100
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:24:29) 
-- CODE:
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
total = s*24 + d*3
conv = /100
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.213317
-- ERROR:
  File "/home/codebench/codes/1616/2926/main.py", line 4
    conv = /100
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:31) 
-- CODE:
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
d = 24
s = 3
total = d + s
print(round(total, 2))

-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:25:32) 
-- CODE:
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
d = 24
s = 3
total = d + s
print(round(total, 2))

-- EXECUTION TIME:
0.152719
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:26:41) 
-- CODE:
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
açai = 24
esfirra = 3
total = açai + esfirra
print(round(total, 2))

-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:26:42) 
-- CODE:
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
açai = 24
esfirra = 3
total = açai + esfirra
print(round(total, 2))

-- EXECUTION TIME:
0.146111
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:28:49) 
-- CODE:
from math import*
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a*1000
total = a + s
print(round(total, 2))
print(conv)
-- OUTPUT:
27
24000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:28:50) 
-- CODE:
from math import*
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a*1000
total = a + s
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.190292
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
24000
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
24000
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
24000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:28:56) 
-- CODE:
from math import*
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a*100
total = a + s
print(round(total, 2))
print(conv)
-- OUTPUT:
27
2400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:28:57) 
-- CODE:
from math import*
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a*100
total = a + s
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.133496
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
2400
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
2400
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
2400
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:28:59) 
-- CODE:
from math import*
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a*100
total = a + s
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.13169
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
2400
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
2400
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
2400
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:32) 
-- CODE:
from math import*
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a/100
total = a + s
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:29:33) 
-- CODE:
from math import*
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a/100
total = a + s
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.187571
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
0.24
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
0.24
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:34) 
-- CODE:
from math import*
açai = float(input("Quantidade de açai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a/100
total = a + s
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:17) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a/100
total = a + s
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:30:19) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a/100
total = a + s
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.140049
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
0.24
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
0.24
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:21) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a/100
total = a + s
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:49) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a/100
total = a + s
print(round(total, 2))
print(round(conv, 2))
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:30:51) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a/100
total = a + s
print(round(total, 2))
print(round(conv, 2))
-- EXECUTION TIME:
0.221888
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
0.24
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
0.24
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:51) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a/100
total = a + s
print(round(total, 2))
print(round(conv, 2))
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:56) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
s = 3
conv = a/100
total = a + s
print(round(total, 2))
print(round(conv, 2))
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:49) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:35:51) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.193073
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
0.24
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
0.24
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:51) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:02) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:36:08) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.201776
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
0.24
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
0.24
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:10) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:57) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:36:59) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.152262
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
0.24
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
0.24
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:06) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:38:08) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.186849
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
0.24
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
0.24
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:10) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:38:11) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.198736
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
0.24
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
0.24
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:38) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))

-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:38:39) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))

-- EXECUTION TIME:
0.218065
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:48) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/1000
total = a + e
print(round(total, 2))

-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:38:49) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/1000
total = a + e
print(round(total, 2))

-- EXECUTION TIME:
0.151119
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:38:50) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/1000
total = a + e
print(round(total, 2))

-- EXECUTION TIME:
0.145822
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:57) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/1000
total = a + e
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.024
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:38:58) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/1000
total = a + e
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.155018
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
0.024
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
0.024
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
0.024
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:19) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- OUTPUT:
27
0.24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:39:20) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.220258
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
0.24
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
0.24
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:39:21) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
conv = a/100
total = a + e
print(round(total, 2))
print(conv)
-- EXECUTION TIME:
0.15476
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
0.24
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
0.24
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:42) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3

total = a + e
print(round(total, 2))

-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:40:43) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3

total = a + e
print(round(total, 2))

-- EXECUTION TIME:
0.19472
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:40:44) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3

total = a + e
print(round(total, 2))

-- EXECUTION TIME:
0.234632
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:16) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:41:18) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.157187
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:19) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:41:20) 
-- CODE:
from math import*
açai = float(input("Quantidade de acai?"))
esfirra = int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.145679
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:24) 
-- CODE:
from math import*
a = float(input("Quantidade de acai?"))
b = int(input("Quantidade de esfirras?"))

total = a / e
print(round(total, 2))

-- OUTPUT:
185.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:42:25) 
-- CODE:
from math import*
a = float(input("Quantidade de acai?"))
b = int(input("Quantidade de esfirras?"))

total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.104207
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
185.41
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
247.21
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
357.21
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:26) 
-- CODE:
from math import*
a = float(input("Quantidade de acai?"))
b = int(input("Quantidade de esfirras?"))

total = a / e
print(round(total, 2))

-- OUTPUT:
185.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:42:27) 
-- CODE:
from math import*
a = float(input("Quantidade de acai?"))
b = int(input("Quantidade de esfirras?"))

total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.181182
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
185.41
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
247.21
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
357.21
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:27) 
-- CODE:
from math import*
a = float(input("Quantidade de acai?"))
b = int(input("Quantidade de esfirras?"))

total = a / e
print(round(total, 2))

-- OUTPUT:
185.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:33) 
-- CODE:
from math import*
a = float(input("Quantidade de acai?"))
b = int(input("Quantidade de esfirras?"))

total = a / e
print(round(total, 2))

-- OUTPUT:
185.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:26) 
-- CODE:
from math import*
acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:35) 
-- CODE:
from math import*
acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:43:36) 
-- CODE:
from math import*
acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.179092
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:45:13) 
-- CODE:
from math import*
acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a*e
print(round(total, 2))

-- OUTPUT:
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:45:15) 
-- CODE:
from math import*
acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a*e
print(round(total, 2))

-- EXECUTION TIME:
0.149721
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
72
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
72
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:45:15) 
-- CODE:
from math import*
acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a*e
print(round(total, 2))

-- OUTPUT:
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:45:32) 
-- CODE:
from math import*
acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a*e
print(round(total, 2))

-- OUTPUT:
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:23) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a*e
print(round(total, 2))

-- OUTPUT:
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:46:24) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a*e
print(round(total, 2))

-- EXECUTION TIME:
0.13723
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
72
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
72
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:25) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a*e
print(round(total, 2))

-- OUTPUT:
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:46:26) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a*e
print(round(total, 2))

-- EXECUTION TIME:
0.141872
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
72
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
72
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:27) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a*e
print(round(total, 2))

-- OUTPUT:
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:46:27) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a*e
print(round(total, 2))

-- EXECUTION TIME:
0.185238
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
72
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
Quantidade de acai?Quantidade de esfirras?72
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
Quantidade de acai?Quantidade de esfirras?72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:46:28) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a*e
print(round(total, 2))

-- EXECUTION TIME:
0.196801
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
72
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
72
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:51) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e/100
print(round(total, 2))

-- OUTPUT:
24.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:46:52) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e/100
print(round(total, 2))

-- EXECUTION TIME:
0.204946
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
24.03
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
24.03
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
24.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:56) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e/1000
print(round(total, 2))

-- OUTPUT:
24.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:46:58) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e/1000
print(round(total, 2))

-- EXECUTION TIME:
0.155887
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
24.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
24.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
24.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:58) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e/1000
print(round(total, 2))

-- OUTPUT:
24.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:47:02) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e/1000
print(round(total, 2))

-- OUTPUT:
24.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:47:11) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e/100
print(round(total, 2))

-- OUTPUT:
24.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:07) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e
print(round(total, 2))

-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:49:08) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e
print(round(total, 2))

-- EXECUTION TIME:
0.150878
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:09) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e
print(round(total, 2))

-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:49:10) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e
print(round(total, 2))

-- EXECUTION TIME:
0.13752
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
27
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
27
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:19) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e/100
print(round(total, 2))

-- OUTPUT:
24.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:50:20) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e/100
print(round(total, 2))

-- EXECUTION TIME:
0.15983
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
24.03
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
24.03
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
24.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:20) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e/100
print(round(total, 2))

-- OUTPUT:
24.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:50:21) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a + e/100
print(round(total, 2))

-- EXECUTION TIME:
0.117754
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
24.03
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
24.03
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
24.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:05) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:53:07) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.183628
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:08) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:28) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:54:30) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.131708
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:54:30) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.14599
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:31) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:54:32) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.223946
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:54:35) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.138944
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:49) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a /+e
print(round(total, 2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:54:51) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a /+e
print(round(total, 2))

-- EXECUTION TIME:
0.158527
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:54:52) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a /+e
print(round(total, 2))

-- EXECUTION TIME:
0.139384
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:54:58) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a e
print(round(total, 2))

-- EXECUTION TIME:
0.163486
-- ERROR:
  File "/home/codebench/codes/1616/2926/main.py", line 6
    total = a e
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:55:03) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:55:05) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.151843
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:55:06) 
-- CODE:

acai = float(input("Quantidade de acai?"))
esfirra= int(input("Quantidade de esfirras?"))
a = 24
e = 3
total = a / e
print(round(total, 2))

-- EXECUTION TIME:
0.19303
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
8.0
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
8.0
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
